--- a/frontend/assets/css/advisor.css
+++ b/frontend/assets/css/advisor.css
@@ -466,8 +466,8 @@
     width: 60px;
     height: 60px;
     border-radius: 50%;
-    background: linear-gradient(135deg, #3f51b5, #536dfe);
-    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+    background: linear-gradient(95deg, #44af84, #6aadd7);
+    box-shadow: 0 5px 15px rgba(37, 38, 32, 0.1);
     display: flex;
     align-items: center;
     justify-content: center;
